name: overture
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak
synopsis: A ground-up rewrite of the Prelude.
description:
    Overture is a ground-up rewrite of the prelude. It explores what the
    Prelude could be like if it was not hamstrung by backwards compatibility.
category: Prelude

source-repository head
    type: git
    location: http://github.com/tfausak/overture

library
    exposed-modules:
        Overture
    build-depends:
        base ==4.8.*
    default-language: Haskell2010
    ghc-options: -Wall

